--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
+    "gapi-script": "^1.2.0",
     "postcss": "^8.4.38",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-google-login": "^5.2.2",
     "tailwindcss": "^3.4.4"
   },
   "devDependencies": {
@@ -28,6 +30,5 @@
     "react-router-dom": "^6.24.0",
     "vite": "^5.3.1"
   },
-  
   "proxy": "http://127.0.0.1:5000"
 }
