--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,8 @@ dist-ssr
 /venv/*
 /credentials.json
 
+db
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
@@ -28,6 +30,6 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
-
+.env
 # Easter Egg!
 test_secret.env
