--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
     "gapi-script": "^1.2.0",
+    "leaflet": "^1.9.4",
+    "leaflet-routing-machine": "^3.2.12",
     "postcss": "^8.4.38",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-google-login": "^5.2.2",
+    "react-leaflet": "^4.2.1",
     "tailwindcss": "^3.4.4"
   },
   "devDependencies": {
